# nuclear_data_to_yamc_format

./: .gitignore  allowing-arrow-in-yamc.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: api.md  conf.py  format.md  getting_started.md  index.md  synthesis.md  usage.md
scripts/: convert_chain.py  convert_endf.py  convert_fendl.py  convert_single_file.py
src/nuclear_data_to_yamc_format/: __init__.py  chain_writer.py  download.py  neutron_reader.py  neutron_writer.py  photon_reader.py  photon_writer.py  schemas.py  synthesis.py  transmutation_writer.py  verify.py
src/nuclear_data_to_yamc_format/cli/: __init__.py  convert_chain.py  convert_endf.py  convert_fendl.py  convert_single_file.py  convert_tendl.py  convert_transmutation.py
tests/: conftest.py  test_neutron_roundtrip.py  test_photon_roundtrip.py  test_synthesis.py
