[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nuclear_data_to_yamc_format"
dynamic = ["version"]
description = "Export OpenMC nuclear data objects to Apache Arrow IPC format"
requires-python = ">=3.9"
dependencies = [
    "pyarrow>=14.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "myst-parser",
    "sphinx-autobuild",
]

[project.scripts]
convert-chain = "nuclear_data_to_yamc_format.cli.convert_chain:main"
convert-endf = "nuclear_data_to_yamc_format.cli.convert_endf:main"
convert-fendl = "nuclear_data_to_yamc_format.cli.convert_fendl:main"
convert-single-file = "nuclear_data_to_yamc_format.cli.convert_single_file:main"
convert-tendl = "nuclear_data_to_yamc_format.cli.convert_tendl:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
